fix alignment on form when growing

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     display: grid;
     grid-template-columns: 60px 1fr;
     gap: 10px;
+    align-self: start;
 }
 
 legend {
@@ -34,10 +35,8 @@ legend {
     grid-column: 2;
 }
 
-.footer {
-    /* grid-row: 2; */
-    grid-column: 1 / 3;
-    text-align: center;
+h2 {
+    margin-top: 0;
 }
 
 .shelf {
@@ -57,4 +56,10 @@ hr {
     background-color: rgb(12, 1, 116);
     height: 1px;
     border: 0;
+}
+
+.footer {
+    /* grid-row: 2; */
+    grid-column: 1 / 3;
+    text-align: center;
 }
